--- a/checkpoint/beat2_poses/0/vqvae/conf.ini
+++ b/checkpoint/beat2_poses/0/vqvae/conf.ini
@@ -1,16 +1,18 @@
 [Model]
 in_channel = 165
-channel = 512
-n_res_block = 6
-n_res_channel = 128
-embed_dim = 128
-n_level = 4
-n_embed = 2048
-decay = 0.99
+channel = 128
+n_res_block = 2
+n_res_channel = 64
+embed_dim = 32
+n_level = 3
+n_embed_layer1 = 8
+n_embed_layer2 = 64
+n_embed_layer3 = 512
+decay = 0.9
 stride = 4
 
 [Train]
-batch = 1024
-epoch = 20
-lr = 1e-4
+batch = 32
+epoch = 400
+lr = 3e-3
 amp = None
